samples/_failures_safe/1761667249_897442_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74f11d2a.c: In function ‘main’:
./samples/SAFE/__tmp_74f11d2a.c:151:5: error: expected expression at end of input
  151 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_74f11d2a.c:151:5: error: expected declaration or statement at end of input
